# conan-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/toolchains/: linux-clang14.cmake
conan/: linux-clang14
include/: hello.h
src/: CMakeLists.txt  hello.cpp  main.cpp
tests/: CMakeLists.txt  hello_test.cpp
